feat: Otimizações de layout e expansão para 20 aeroportos
- Implementado sistema de abas na página de estatísticas
- Layout ultra-compacto que cabe em uma tela sem scroll
- Expandida simulação de 10 para 20 aeroportos (13.680 simulações)
- Adicionados aeroportos: Macapá, Maceió, Navegantes, Natal, Vitória, Manaus
- Aumentados tamanhos de cards e logos das companhias (80% maior)
- Calculadora e estatísticas com layout compacto para notebooks
- Adicionado botão de estatísticas na página de resultados
- Navegação consistente em todas as páginas
- Removido Matheus Vinícius da equipe
- Todos os 20 aeroportos disponíveis na calculadora

--- a/calculator.html
+++ b/calculator.html
@@ -38,6 +38,7 @@
                 <a href="index.html#home">Início</a>
                 <a href="index.html#parceiros">Parceiros</a>
                 <a href="index.html#equipe">Equipe</a>
+                <a href="statistics.html">Estatísticas</a>
             </nav>
         </div>
     </header>
@@ -98,6 +99,16 @@
                                         <option value="FOR">FOR - Fortaleza</option>
                                         <option value="REC">REC - Recife</option>
                                         <option value="POA">POA - Porto Alegre</option>
+                                        <option value="CWB">CWB - Curitiba</option>
+                                        <option value="FLN">FLN - Florianópolis</option>
+                                        <option value="BEL">BEL - Belém</option>
+                                        <option value="VCP">VCP - Campinas</option>
+                                        <option value="MCP">MCP - Macapá</option>
+                                        <option value="MCZ">MCZ - Maceió</option>
+                                        <option value="NVT">NVT - Navegantes</option>
+                                        <option value="NAT">NAT - Natal</option>
+                                        <option value="VIX">VIX - Vitória</option>
+                                        <option value="MAO">MAO - Manaus</option>
                                     </select>
                                 </div>
 
@@ -118,6 +129,16 @@
                                         <option value="FOR">FOR - Fortaleza</option>
                                         <option value="REC">REC - Recife</option>
                                         <option value="POA">POA - Porto Alegre</option>
+                                        <option value="CWB">CWB - Curitiba</option>
+                                        <option value="FLN">FLN - Florianópolis</option>
+                                        <option value="BEL">BEL - Belém</option>
+                                        <option value="VCP">VCP - Campinas</option>
+                                        <option value="MCP">MCP - Macapá</option>
+                                        <option value="MCZ">MCZ - Maceió</option>
+                                        <option value="NVT">NVT - Navegantes</option>
+                                        <option value="NAT">NAT - Natal</option>
+                                        <option value="VIX">VIX - Vitória</option>
+                                        <option value="MAO">MAO - Manaus</option>
                                     </select>
                                 </div>
                             </div>
