--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <a href="#parceiros">Parceiros</a>
                 <a href="#solucao">Solução</a>
                 <a href="#equipe">Equipe</a>
+                <a href="calculator.html">Calculadora</a>
+                <a href="statistics.html">Estatísticas</a>
             </nav>
         </div>
     </header>
@@ -443,24 +445,6 @@
                             </a>
                         </div>
                     </div>
-
-                    <div class="team-card">
-                        <div class="member-avatar">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <h4 class="member-name">Matheus Vinícius</h4>
-                        <p class="member-role">Back-end Developer</p>
-                        <div class="member-links">
-                            <a href="#" class="social-link" aria-label="GitHub" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="social-link" aria-label="LinkedIn" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -491,6 +475,8 @@
                     <a href="#parceiros">Parceiros</a>
                     <a href="#solucao">Solução</a>
                     <a href="#equipe">Equipe</a>
+                    <a href="calculator.html">Calculadora</a>
+                    <a href="statistics.html">Estatísticas</a>
                 </div>
             </div>
         </div>
