--- a/result.html
+++ b/result.html
@@ -38,6 +38,7 @@
                 <a href="index.html#home">Início</a>
                 <a href="index.html#parceiros">Parceiros</a>
                 <a href="index.html#equipe">Equipe</a>
+                <a href="statistics.html">Estatísticas</a>
             </nav>
         </div>
     </header>
@@ -141,6 +142,10 @@
                         <a href="calculator.html" class="new-calculation">
                             <i class="fas fa-redo"></i>
                             <span>Nova Consulta</span>
+                        </a>
+                        <a href="statistics.html" class="home-button">
+                            <i class="fas fa-chart-bar"></i>
+                            <span>Ver Estatísticas</span>
                         </a>
                         <a href="index.html" class="home-button">
                             <i class="fas fa-home"></i>
