feat: Integração de features extras da API - tratamento de erros customizados, endpoints de estatísticas e correções de bugs

--- a/calculator.html
+++ b/calculator.html
@@ -200,6 +200,7 @@
         </div>
     </footer>
 
+    <script src="error-handler.js"></script>
     <script src="calculator.js"></script>
 </body>
 
