--- a/result.html
+++ b/result.html
@@ -79,7 +79,7 @@
 
                     <div class="probability-container">
                         <div class="probability-label">
-                            <span>Probabilidade de Atraso</span>
+                            <span id="probabilityLabel">Probabilidade de Atraso</span>
                             <span class="probability-value" id="probabilityValue">-</span>
                         </div>
                         <div class="probability-bar">
